add inventory to ui
